--- a/content/standards/navigation/navigation.scss
+++ b/content/standards/navigation/navigation.scss
@@ -1,5 +1,16 @@
 .navigation {
+    height:1000px;
+    position: relative;
 
+    &__content {
+        position: absolute;
+        top:50%;
+        transform: translateY(-50%) translateX(-50%);
+        left: 50%;
+        text-align: center;
+        color:White;
+        font-family: 'Raleway', sans-serif;
+    }
     &__links {
         list-style-type: none;
         display:flex;
@@ -9,13 +20,46 @@
         font-family: 'Raleway', sans-serif;
         text-decoration: none;
         color:White !important;
-        font-size: 13px !important;
+        font-size: 17px !important;
         letter-spacing: .2em;
+
     }
     &__logo {
         color:White !important;
         font-family: 'Raleway', sans-serif;
         font-weight: 400;
-        font-size: 20px ;
+        font-size: 20px;
+        text-shadow: black 2px 5px 20px
+    }
+    &__headline {
+        font-size: 48px;
+
+        @media screen and (min-width: 480px) {
+            font-size: 64px;
+        }
+    }
+    &__info {
+        margin-top: 50px;
+        font-family: 'Raleway', sans-serif;
+    }
+    &__button {
+        color:White !important;
+        font-family: 'Raleway', sans-serif;
+        padding-right:50px;
+        padding-left:50px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        border:2px solid white;
+        text-decoration: none;
+        display: inline-block;
+        margin-top:30px;
+        width:200px;
+    }
+}
+.menu-item {
+    margin-right:40px;
+
+    &:last-child {
+        margin:0;
     }
 }
