--- a/content/elements/book/book.scss
+++ b/content/elements/book/book.scss
@@ -1,7 +1,9 @@
 .magazine {
-    height:500px;
-    width:500px;
+    height:400px;
+    width:250px;
     margin:0 auto;
+    opacity: 0;
+    overflow: hidden;
 
     @media screen and (min-width:992px) {
         width:1000px;
@@ -22,14 +24,22 @@
 
     &__image {
         border-radius: 10000px;
-        width:250px;
+        width:100px;
+
+        @media screen and (min-width:992px) {
+            width:250px;
+        }
     }
     &__food {
         font-weight: 900;
         font-family: 'Raleway', sans-serif;
         margin-top:50px;
         text-decoration: underline;
-        font-size: 20px;
+        font-size: 12px;
+
+        @media screen and (min-width:992px) {
+            font-size: 20px;
+        }
     }
     &__download {
         font-family: 'Raleway', sans-serif;
