--- a/content/standards/navigation/navigation.css
+++ b/content/standards/navigation/navigation.css
@@ -20,6 +20,13 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  margin-top: 50px;
+}
+
+@media screen and (min-width: 992px) {
+  .navigation__links {
+    margin: 0;
+  }
 }
 
 .navigation__link {
@@ -68,10 +75,16 @@
 }
 
 .menu-item {
-  margin-right: 40px;
+  text-align: center;
 }
 
-.menu-item:last-child {
-  margin: 0;
+@media screen and (min-width: 992px) {
+  .menu-item {
+    margin-right: 40px;
+    text-align: left;
+  }
+  .menu-item:last-child {
+    margin: 0;
+  }
 }
 /*# sourceMappingURL=navigation.css.map */
