--- a/content/standards/navigation/navigation.scss
+++ b/content/standards/navigation/navigation.scss
@@ -15,6 +15,11 @@
         list-style-type: none;
         display:flex;
         width:100%;
+        margin-top:50px;
+
+        @media screen and(min-width:992px) {
+            margin:0;
+        }
     }
     &__link {      
         font-family: 'Raleway', sans-serif;
@@ -57,9 +62,13 @@
     }
 }
 .menu-item {
-    margin-right:40px;
+    text-align: center;
+    @media screen and (min-width:992px) {
+        margin-right:40px;
+        text-align: left;
 
-    &:last-child {
-        margin:0;
+        &:last-child {
+            margin:0;
+        }
     }
 }
