--- a/content/elements/book/book.scss
+++ b/content/elements/book/book.scss
@@ -5,6 +5,10 @@
     opacity: 0;
     overflow: hidden;
 
+    .hard {
+        border:1px solid black;
+    }
+
     @media screen and (min-width:992px) {
         width:1000px;
     }
@@ -52,5 +56,8 @@
         &:hover {
             color:black;
         }
+    }
+    &__info {
+        font-size:12px;
     }
 }
