--- a/style/style.scss
+++ b/style/style.scss
@@ -6,6 +6,8 @@ body {
 @import "../content/elements/textimage/textimage";
 @import "../content/elements/book/book";
 @import "../content/elements/contact/contact-form";
+@import "../content/elements/map/map";
+@import "../content/standards/footer/footer";
 
 
 .faderight {
