--- a/style/style.css
+++ b/style/style.css
@@ -142,6 +142,10 @@ body {
   overflow: hidden;
 }
 
+.magazine .hard {
+  border: 1px solid black;
+}
+
 @media screen and (min-width: 992px) {
   .magazine {
     width: 1000px;
@@ -200,6 +204,10 @@ body {
   color: black;
 }
 
+.magazine__info {
+  font-size: 12px;
+}
+
 .contact {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -237,6 +245,26 @@ body {
 
 .contact input {
   padding: 10px;
+}
+
+.map {
+  margin-top: 150px;
+}
+
+.footer {
+  width: 100%;
+  background-color: #222222;
+  padding-bottom: 150px;
+  padding-top: 150px;
+  color: White;
+}
+
+.footer a {
+  color: White;
+}
+
+.footer a:hover {
+  text-decoration: none;
 }
 
 .faderight {
