--- a/style/style.css
+++ b/style/style.css
@@ -208,6 +208,19 @@ body {
   font-size: 12px;
 }
 
+.magazine__heading {
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+@media screen and (min-width: 992px) {
+  .magazine__heading {
+    font-size: 30px;
+  }
+}
+
 .contact {
   display: -webkit-box;
   display: -ms-flexbox;
