--- a/content/elements/book/book.css
+++ b/content/elements/book/book.css
@@ -1,6 +1,6 @@
 .magazine {
-  height: 400px;
-  width: 250px;
+  height: 950px;
+  width: 300px;
   margin: 0 auto;
   opacity: 0;
   overflow: hidden;
@@ -12,6 +12,7 @@
 
 @media screen and (min-width: 992px) {
   .magazine {
+    height: 750px;
     width: 1000px;
   }
 }
@@ -44,14 +45,14 @@
 .magazine__food {
   font-weight: 900;
   font-family: 'Raleway', sans-serif;
-  margin-top: 50px;
+  margin-top: 0px;
   text-decoration: underline;
   font-size: 12px;
 }
 
 @media screen and (min-width: 992px) {
   .magazine__food {
-    font-size: 20px;
+    font-size: 15px;
   }
 }
 
@@ -83,5 +84,9 @@
   .magazine__heading {
     font-size: 30px;
   }
+}
+
+.magazine__date {
+  margin-top: 20px;
 }
 /*# sourceMappingURL=book.css.map */
