--- a/content/elements/contact/contact-form.scss
+++ b/content/elements/contact/contact-form.scss
@@ -26,4 +26,9 @@
     input {
         padding:10px;
     }
+    &__information {
+        font-family: 'Raleway', sans-serif;
+        text-align: center;
+        margin-top:50px;
+    }
 }
