--- a/content/elements/book/book.scss
+++ b/content/elements/book/book.scss
@@ -1,6 +1,6 @@
 .magazine {
-    height:400px;
-    width:250px;
+    height:950px;
+    width:300px;
     margin:0 auto;
     opacity: 0;
     overflow: hidden;
@@ -10,6 +10,7 @@
     }
 
     @media screen and (min-width:992px) {
+        height:750px;
         width:1000px;
     }
 
@@ -37,12 +38,12 @@
     &__food {
         font-weight: 900;
         font-family: 'Raleway', sans-serif;
-        margin-top:50px;
+        margin-top:0px;
         text-decoration: underline;
         font-size: 12px;
 
         @media screen and (min-width:992px) {
-            font-size: 20px;
+            font-size: 15px;
         }
     }
     &__download {
@@ -68,5 +69,8 @@
         @media screen and (min-width:992px) {
             font-size: 30px;
         }
+    }
+    &__date {
+        margin-top:20px;
     }
 }
