--- a/content/elements/contact/contact-form.css
+++ b/content/elements/contact/contact-form.css
@@ -36,4 +36,10 @@
 .contact input {
   padding: 10px;
 }
+
+.contact__information {
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  margin-top: 50px;
+}
 /*# sourceMappingURL=contact-form.css.map */
